tp05/src/simple-image-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-api-deployment
  labels:
    app: image-api 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: image-api
  template:
    metadata:
      labels:
        app: image-api
    spec:
      containers:
      - name: image-api 
        image: postgrest/postgrest
        ports:
        - containerPort: 3000
