tp05/src/simple-service-image-api-clusterip.yml
kind: Service
apiVersion: v1
metadata:
  name: service-image-api-clusterip
spec:
  selector:
    app: image-api 
  ports:
  - protocol: TCP
    port: 3000 
    targetPort: 3000
