tp05/src/simple-service-postgres-clusterip.yml
kind: Service
apiVersion: v1
metadata:
  name: service-postgres-clusterip
spec:
  selector:
    app: postgres 
  ports:
  - protocol: TCP 
    port: 5432 
    targetPort: 5432
